# solis_2d

./: .gitignore  Cargo.toml  README.md
examples/: benchmark.rs  light.rs  simple.rs
src/: bounce.rs  camera.rs  cascade.rs  common.rs  composite.rs  config.rs  constant.rs  lib.rs  light.rs  merge.rs  mipmap.rs  node.rs  probe.rs  radiance.rs  sdf.rs  size.rs  targets.rs  view.rs
src/shaders/: bounce.wgsl  cascade.wgsl  common.wgsl  composite.wgsl  filter.wgsl  light.wgsl  merge.wgsl  mipmap.wgsl  probes.wgsl  raymarch.wgsl  sdf.wgsl  shapes.wgsl
