[package]
name = "lommix_light"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
bitflags = "2.5.0"
bytemuck = "1.15.0"
rand = "0.8.5"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[dev-dependencies]
bevy_egui = "0.28"
image = "0.25.2"

[features]
dev = ["bevy/file_watcher", "bevy/embedded_watcher"]
