[package]
name = "lommix_light"
authors = ["Lorenz Mielke"]
description = "2D global illumination with optimized radiance cascade"
keywords = ["illumination", "bevy", "light", "gamedev", "radiance cascade"]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
bitflags = "2.5.0"
bytemuck = "1.15.0"
rand = "0.8.5"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[dev-dependencies]
bevy_egui = "0.28"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = "0.25.2"

[features]
dev = ["bevy/file_watcher", "bevy/embedded_watcher"]

[[example]]
name = "light"
path = "examples/light.rs"
