[package]
name = "solis_2d"
authors = ["Lorenz Mielke"]
description = "2D global illumination with optimized radiance cascade"
keywords = ["illumination", "bevy", "light", "graphics", "shader"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Lommix/solis_2d"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_sprite",
] }
bitflags = "2.5.0"
bytemuck = "1.15.0"
rand = "0.8.5"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[dev-dependencies]
bevy_egui = "0.28"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = "0.25.2"
bevy = { version = "0.14", default-features = false, features = [
  "bevy_sprite",
  "bevy_ui",
  "bevy_asset",
  "png",
  "wayland",
] }

[features]
dev = ["bevy/file_watcher", "bevy/embedded_watcher", "bevy/multi_threaded"]

[[example]]
name = "light"
path = "examples/light.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"
